# pkg/pb/identity-api_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.5.1
+// - protoc             v3.7.1
 // source: identity-api.proto
 
 package pb
@@ -28,7 +28,10 @@ type IdentityServiceClient interface {
 	GetByEmail(ctx context.Context, in *StringRequest, opts ...grpc.CallOption) (*User, error)
 	GetAll(ctx context.Context, in *ListRequest, opts ...grpc.CallOption) (*ListUserResponse, error)
 	UpdatebyId(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*StringResponse, error)
+	UpdateInfoUserbyId(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*StringResponse, error)
+	UpdateRoleUserbyId(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*StringResponse, error)
 	DeleteById(ctx context.Context, in *StringRequest, opts ...grpc.CallOption) (*StringResponse, error)
+	ApproveUser(ctx context.Context, in *ApproveUserRequest, opts ...grpc.CallOption) (*StringResponse, error)
 }
 
 type identityServiceClient struct {
@@ -93,9 +96,36 @@ func (c *identityServiceClient) UpdatebyId(ctx context.Context, in *UpdateUserRe
 	return out, nil
 }
 
+func (c *identityServiceClient) UpdateInfoUserbyId(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*StringResponse, error) {
+	out := new(StringResponse)
+	err := c.cc.Invoke(ctx, "/identity_api.IdentityService/UpdateInfoUserbyId", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *identityServiceClient) UpdateRoleUserbyId(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*StringResponse, error) {
+	out := new(StringResponse)
+	err := c.cc.Invoke(ctx, "/identity_api.IdentityService/UpdateRoleUserbyId", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *identityServiceClient) DeleteById(ctx context.Context, in *StringRequest, opts ...grpc.CallOption) (*StringResponse, error) {
 	out := new(StringResponse)
 	err := c.cc.Invoke(ctx, "/identity_api.IdentityService/DeleteById", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *identityServiceClient) ApproveUser(ctx context.Context, in *ApproveUserRequest, opts ...grpc.CallOption) (*StringResponse, error) {
+	out := new(StringResponse)
+	err := c.cc.Invoke(ctx, "/identity_api.IdentityService/ApproveUser", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -112,7 +142,10 @@ type IdentityServiceServer interface {
 	GetByEmail(context.Context, *StringRequest) (*User, error)
 	GetAll(context.Context, *ListRequest) (*ListUserResponse, error)
 	UpdatebyId(context.Context, *UpdateUserRequest) (*StringResponse, error)
+	UpdateInfoUserbyId(context.Context, *UpdateUserRequest) (*StringResponse, error)
+	UpdateRoleUserbyId(context.Context, *UpdateUserRequest) (*StringResponse, error)
 	DeleteById(context.Context, *StringRequest) (*StringResponse, error)
+	ApproveUser(context.Context, *ApproveUserRequest) (*StringResponse, error)
 	mustEmbedUnimplementedIdentityServiceServer()
 }
 
@@ -138,8 +171,17 @@ func (UnimplementedIdentityServiceServer) GetAll(context.Context, *ListRequest) 
 func (UnimplementedIdentityServiceServer) UpdatebyId(context.Context, *UpdateUserRequest) (*StringResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method UpdatebyId not implemented")
 }
+func (UnimplementedIdentityServiceServer) UpdateInfoUserbyId(context.Context, *UpdateUserRequest) (*StringResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateInfoUserbyId not implemented")
+}
+func (UnimplementedIdentityServiceServer) UpdateRoleUserbyId(context.Context, *UpdateUserRequest) (*StringResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateRoleUserbyId not implemented")
+}
 func (UnimplementedIdentityServiceServer) DeleteById(context.Context, *StringRequest) (*StringResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DeleteById not implemented")
+}
+func (UnimplementedIdentityServiceServer) ApproveUser(context.Context, *ApproveUserRequest) (*StringResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ApproveUser not implemented")
 }
 func (UnimplementedIdentityServiceServer) mustEmbedUnimplementedIdentityServiceServer() {}
 
@@ -262,6 +304,42 @@ func _IdentityService_UpdatebyId_Handler(srv interface{}, ctx context.Context, d
 	return interceptor(ctx, in, info, handler)
 }
 
+func _IdentityService_UpdateInfoUserbyId_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateUserRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(IdentityServiceServer).UpdateInfoUserbyId(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/identity_api.IdentityService/UpdateInfoUserbyId",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(IdentityServiceServer).UpdateInfoUserbyId(ctx, req.(*UpdateUserRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _IdentityService_UpdateRoleUserbyId_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateUserRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(IdentityServiceServer).UpdateRoleUserbyId(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/identity_api.IdentityService/UpdateRoleUserbyId",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(IdentityServiceServer).UpdateRoleUserbyId(ctx, req.(*UpdateUserRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _IdentityService_DeleteById_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(StringRequest)
 	if err := dec(in); err != nil {
@@ -276,6 +354,24 @@ func _IdentityService_DeleteById_Handler(srv interface{}, ctx context.Context, d
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(IdentityServiceServer).DeleteById(ctx, req.(*StringRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _IdentityService_ApproveUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ApproveUserRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(IdentityServiceServer).ApproveUser(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/identity_api.IdentityService/ApproveUser",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(IdentityServiceServer).ApproveUser(ctx, req.(*ApproveUserRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -312,8 +408,20 @@ var IdentityService_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _IdentityService_UpdatebyId_Handler,
 		},
 		{
+			MethodName: "UpdateInfoUserbyId",
+			Handler:    _IdentityService_UpdateInfoUserbyId_Handler,
+		},
+		{
+			MethodName: "UpdateRoleUserbyId",
+			Handler:    _IdentityService_UpdateRoleUserbyId_Handler,
+		},
+		{
 			MethodName: "DeleteById",
 			Handler:    _IdentityService_DeleteById_Handler,
+		},
+		{
+			MethodName: "ApproveUser",
+			Handler:    _IdentityService_ApproveUser_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
